--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
 
     //Original Coroutine
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+
+    //SplashScreen
+    implementation "androidx.core:core-splashscreen:1.0.0"
 }
